# pony-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  plan.md
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/pony/ayy/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/cpp/platform/: LogAndroid.cpp
android/app/src/main/java/com/pony/ayy/: EngineGLSurfaceView.java  MainActivity.java
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/pony/ayy/: ExampleUnitTest.java
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
docs/: editor-build-guide.md
editor/: CMakeLists.txt
editor/src/: main.cpp
editor/src/platform/: LogDesktop.cpp
engine/Core/: GLCompat.h  Log.h
engine/Runtime/Graphics/: GLCheck.h  GfxDevice.cpp  GfxDevice.h  Graphic.cpp  Graphic.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  VertexBuffer.cpp  VertexBuffer.h
engine/Runtime/Renderer/: Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h
engine/Runtime/Scene/: Scene.cpp  Scene.h  TestScene.cpp  TestScene.h
